--- a/src/components/homePage/HomePage.css
+++ b/src/components/homePage/HomePage.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0 auto;
+}
+
 .copywrites {
     position: fixed;
     left: 0;
@@ -9,3 +13,100 @@
     font-size: 80%;
     background-color: #3B5998;
   }
+
+  .HomePage {
+    background-color: #3B5998 ;
+  }
+
+.color {
+    color: white;
+}
+
+.image {
+    width: 78%;
+    border-radius: 2rem;
+    box-shadow : 0px 2px 20px 4px rgba(0,0,0,0.51) ;
+    -webkit-box-shadow : 0px 2px 20px 4px rgba(0,0,0,0.51) ;
+    -moz-box-shadow : 0px 2px 20px 4px rgba(0,0,0,0.51) ;
+}
+.description {
+    border-radius: 2rem;
+    width: 50%;
+}
+
+.icons {
+    cursor: pointer;
+}
+
+.icon {
+  margin: auto 1%;
+  color: black;
+}
+
+/* lg */
+@media screen and (min-width: 1200px) {
+  .text {
+    text-align: center;
+    font-size: 80%;
+    padding: 1% 25% 0% 25%;
+  }
+  .description-card {
+    background-color: #3B5998;
+    padding: 2% 10% 5% 10%;
+  }
+  .description {
+    border-radius: 2rem;
+    width: 30%;
+  }
+}
+
+/* md */
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .text {
+    text-align: center;
+    font-size: 80%;
+    padding: 1% 10% 0% 10%;
+  }
+  .description-card {
+    background-color: #3B5998;
+    padding: 5% 10% 15% 10%;
+  }
+  .description {
+    border-radius: 2rem;
+    width: 35%;
+  }
+}
+
+/* sm */
+@media screen and (max-width: 767px) {
+  .text {
+    text-align: center;
+    font-size: 80%;
+    padding: 1% 5% 0% 5%;
+  }
+  .description-card {
+    background-color: #3B5998;
+    padding: 10% 10% 25% 10%;
+  }
+  .description {
+    border-radius: 2rem;
+    width: 40%;
+  }
+}
+
+/* xs */
+@media screen and (max-width: 479px) {
+  .text {
+    text-align: center;
+    font-size: 80%;
+    padding: 1% 0% 0% 0%;
+  }
+  .description-card {
+    background-color: #3B5998;
+    padding: 10% 10% 28% 10%;
+  }
+  .description {
+    border-radius: 2rem;
+    width: 50%;
+  }
+}
