--- a/src/components/porfolio/Porfolio.css
+++ b/src/components/porfolio/Porfolio.css
@@ -4,7 +4,42 @@
 } */
 
 .titre_session {
-    color: #3B5998;
+    color: #E67E22;
     /* background-color: #E67E22; */
     position: absolute;
 }
+
+.titre_session2 {
+    /* padding: 0.5% 0% 2% 5%; */
+    color: #3B5998;
+    /* background-color: #3B5998; */
+    /* position: absolute; */
+}
+
+.titre_session_formation {
+    /* padding: 0.5% 4% 1% 4%; */
+    color: #E67E22;
+    /* background-color: #FDFEFE; */
+    /* position: absolute; */
+}
+
+/* .button {
+    align-content: end;
+    padding-top: 5%;
+}
+
+button {
+    font-size: 130%;
+    color: #3B5998;
+    border: none;
+    background-color: #FDFEFE;
+    padding: 0% 5%;
+}
+
+button:hover {
+    padding: 0% 5%;
+    font-size: 130%;
+    color: #FDFEFE;
+    border: none;
+    background-color: #7d7d7d;
+} */
