--- a/src/components/Copyright/Copyright.css
+++ b/src/components/Copyright/Copyright.css
@@ -7,5 +7,5 @@
     text-align: center;
     color: white;
     font-size: 80%;
-    background-color: #3B5998;
+    background-color: #023fac;
   }
